# CataclysmEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  envMac.cmake  setup.sh
CataclysmEngine/Header/: CObject.hpp  CataclysmCamera.hpp  CataclysmModel.hpp  CataclysmPipeline.hpp  CataclysmRenderSystem.hpp  CataclysmSwapChain.hpp  FirstApplication.hpp  KeyboardControllerMovement.hpp
CataclysmEngine/Source/: CMakeLists.txt  CataclysmModel.cpp  CataclysmRenderSystem.cpp  CataclysmRenderer.cpp  CataclysmSwapChain.cpp  CataclysmWindow.cpp  FirstApplication.cpp  KeyboardControllerMovement.cpp  main.cpp
CataclysmEngine/Source/Shaders/: compile.command  simple_shader.frag  simple_shader.vert
shaders/: simple_shader.frag  simple_shader.vert
src/: CObject.cpp  CataclysmApplication.cpp  CataclysmApplication.hpp  CataclysmBuffer.cpp  CataclysmBuffer.hpp  CataclysmCamera.cpp  CataclysmDescriptors.cpp  CataclysmDescriptors.hpp  CataclysmDevice.cpp  CataclysmDevice.hpp  CataclysmFrameInfo.hpp  CataclysmModel.cpp  CataclysmModel.hpp  CataclysmObject.hpp  CataclysmPipeline.cpp  CataclysmRenderSystem.cpp  CataclysmRenderSystem.hpp  CataclysmRenderer.cpp  CataclysmRenderer.hpp  CataclysmSwapChain.cpp  CataclysmSwapChain.hpp  CataclysmUI.cpp  CataclysmUI.hpp  CataclysmUtlis.hpp  CataclysmWindow.cpp  CataclysmWindow.hpp  KeyboardControllerMovement.cpp  KeyboardControllerMovement.hpp  main.cpp
