CMAKE_MINIMUM_REQUIRED(VERSION 3.28.1)
SET(CMAKE_CXX_C0MPILER /usr/bin/clang++)

PROJECT(CataclysmEngine)


SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/binaries)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/Libraries)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/ThirdParty ${CMAKE_SOURCE_DIR}/Libraries/TinyObjLoader)


ADD_SUBDIRECTORY(CataclysmEngine/Source)