INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/CataclysmEngine/Header)


FILE(GLOB_RECURSE ENGINE_SOURCE_FILES *.cpp *.c)
FILE(GLOB_RECURSE ENGINE_HEADER_FILES *.hpp *h *inl)

ADD_EXECUTABLE(CataclysmEditor ${ENGINE_SOURCE_FILES} ${ENGINE_HEADER_FILES})
TARGET_LINK_LIBRARIES(CataclysmEditor ${CMAKE_SOURCE_DIR}/Libraries/GLFW3/libglfw.3.dylib ${CMAKE_SOURCE_DIR}/Libraries/Vulkan/libvulkan.1.3.275.dylib)